Wrote instructions how to debug, run, test the plugin.